<resources>
    <string name="app_name">SubmissionPertama</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="dicoding_finished_event">Dicoding Finished Event</string>
    <string name="recommendation_event">Recommendation event for you!</string>
    <string name="finished_event">These are events that have been held</string>
    <string name="event">Event</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="finished_event_title">Finished Event</string>
    <string name="owner_name">Owner Name</string>
    <string name="begin_time">Begin Time</string>
    <string name="remaining_quota">Sisa Quota : %d</string>
    <string name="description">Deskripsi</string>
    <string name="event_description">Deskripsi Event</string>
    <string name="event_summary">Event Summary</string>
    <string name="empty_data">Data Kosong</string>
    <string name="register">Register</string>
    <string name="input_event_name">Masukkan nama event</string>
    <string name="favourite">Favorit</string>
    <string name="settings">Pengaturan</string>
    <string name="is_dark_mode">Dark Mode</string>
    <string name="is_remainder">Daily Remainder</string>
    <string name="key_dark_mode">darkMode</string>
    <string name="key_remainder">remainder</string>
    <string name="favourite_event">Favorit Event</string>
</resources>